# 7th-semester

./: README.md
Computación Gráfica/: .gitignore
Computación Gráfica/E2/: solucion-problema1.py  solucion-problema2.py  solucion-problema4.py
Computación Gráfica/PC1/: test.py
Computación Gráfica/PC2/: CMakeLists.txt
Computación Gráfica/PC2/exercise01/: solution.cpp
Computación Gráfica/PC2/exercise02/: solution.cpp
Computación Gráfica/PC2/exercise03/: solution.cpp
Computación Gráfica/PC2/exercise04/: solution.cpp
Computación Gráfica/PC2/exercise05/: solution.cpp
Computación Gráfica/PC2/exercise06/: JarvisAndGraham.h  comparisonTable.txt  solution.cpp
Computación Gráfica/PC2/exercise07/: solution.cpp
Computación Gráfica/PC2/exercise08/: solution.cpp
Computación Gráfica/PC2/exercise09/: solution.txt
Computación Gráfica/PC2/exercise10/: solution.cpp
Computación Gráfica/PC2/exercise11/: solution.cpp
Computación Gráfica/PC2/exercise12/: solution.cpp
Computación Gráfica/PC2/exercise13/: solution.cpp
Computación Gráfica/PC2/exercise14/: solution.cpp
Computación Gráfica/PC3/: .gitignore
Computación Gráfica/Proyecto/: .gitignore  apply_swap.py  extract_faces.py  make_video.py  prueba.py  train_model.py
Computación Gráfica/S1/: animation1.py  animation2.py  lab1.py  lab2.py  mandelbrot.py  prueba2.py
Computación Gráfica/S12/: .gitignore  main.py  p1.py  p2.py
Computación Gráfica/S13/: detect-and-overlay.py  main.py
Computación Gráfica/S2/: p1.py  p2.py  p3.py
Computación Gráfica/S3/: p1.py
Sistemas Operativos/: .gitignore
(+110 files in other folders)
